--- a/build
+++ b/build
@@ -5,13 +5,13 @@ amd64=0
 if [[ $amd64 != 0 ]];then
     bits=64
     cppcomp=$cppcomp64
-    asmformat=elf64
+    asmformat=win64
     entry="entry"
     imagebase=0x000000100000000
 else
     bits=32
     cppcomp=$cppcomp32
-    asmformat=elf
+    asmformat=win32
     entry="_entry"
     imagebase=0x10000000
 fi
