--- a/src/build
+++ b/src/build
@@ -8,13 +8,14 @@ ar32=i686-w64-mingw32-ar
 ar64=x86_64-w64-mingw32-ar
 subdir1=`dirname $PWD`
 subdir0=`dirname $subdir1`
+miscdir=$subdir0/libmisc
 thisdir=${subdir1##*/}
 win=$HOME/.wine/drive_c
 src=$PWD
 
 sizeopt="-Os -fomit-frame-pointer -fno-stack-protector -mno-stack-arg-probe"
 cppopt="-fno-threadsafe-statics -fno-rtti"
-cfshared="-std=c++17 -static -static-libgcc -static-libstdc++ -D_UNICODE -DUNICODE -municode -s -fno-ident -fno-asynchronous-unwind-tables -fdata-sections -ffunction-sections -nostdlib -fno-exceptions -fno-sized-deallocation $cppopt $sizeopt"
+cfshared="-I$miscdir/src -std=c++17 -static -static-libgcc -static-libstdc++ -D_UNICODE -DUNICODE -municode -s -fno-ident -fno-asynchronous-unwind-tables -fdata-sections -ffunction-sections -nostdlib -fno-exceptions -fno-sized-deallocation $cppopt $sizeopt"
 
 build ()
 { 
