--- a/src/build
+++ b/src/build
@@ -15,7 +15,7 @@ src=$PWD
 
 sizeopt="-Os -fomit-frame-pointer -fno-stack-protector -mno-stack-arg-probe"
 cppopt="-fno-threadsafe-statics -fno-rtti"
-cfshared="-I$miscdir/src -std=c++17 -static -static-libgcc -static-libstdc++ -D_UNICODE -DUNICODE -municode -s -fno-ident -fno-asynchronous-unwind-tables -fdata-sections -ffunction-sections -nostdlib -fno-exceptions -fno-sized-deallocation $cppopt $sizeopt"
+cfshared="-I$miscdir/src -std=c++17 -static -static-libgcc -static-libstdc++ -D_UNICODE -DUNICODE -municode -s -fno-ident -fno-asynchronous-unwind-tables -ffunction-sections -nostdlib -fno-exceptions -fno-sized-deallocation $cppopt $sizeopt"
 
 build ()
 { 
